fixing timer display overlap

--- a/scss/_components.timer.scss
+++ b/scss/_components.timer.scss
@@ -7,7 +7,7 @@
   bottom: 7px;
   left: 80px;
   position: absolute;
-  width: 140px;
+  width: 150px;
   padding: 0;
 
   .button--warning {
@@ -25,7 +25,7 @@
       color: $warning;
       display: inline-block;
       font-family: $font-condensed;
-      font-size: 28px;
+      font-size: 26px;
       padding: 0;
     }
 
